fix: :art: The ticket bars image is now responsive and does not break on any phone.

--- a/css/tickets/style.css
+++ b/css/tickets/style.css
@@ -115,6 +115,10 @@ header img:nth-child(1) {
     gap: 16px;
 }
 
+.barsBottom img{
+    width: 70svw;
+}
+
 .barsBottom p {
     font-family: "Inter-Regular";
     font-size: 12px;
